# git-zprompt

./: Cargo.toml  README.md
src/: color.rs  main.rs
