[package]
name = "git-zprompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
git2 = { version = "*", default-features = false }
log = "*"
env_logger = "*"
colored = "*"
