[package]
name = "git-zprompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
# Should be safe, it is short-lived program anyway
panic = "abort"

[dependencies]
git2 = { version = "*", default-features = false }
colored = "*"
